<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add_edit_cat_list_title">Edit Categories</string>
    
    <string name="add_edit_flist_default_category_text">Default Category</string>
    <string name="add_edit_flist_default_category_spinner_text">None</string>
    <string name="add_edit_flist_visible_check_box_text">Visible</string>
    <string name="flist_list_text_view_header">Lists</string>
    <string name="flist_list_text_view">CatListTextView</string>
    <string name="flist_list_text_view_type">Type Name</string>
    <string name="flist_list_add_button_text">+</string>
    <string name="flist_filter_add_button_text">+</string>
    
    <string name="category_view_fragment_title">Categories</string>
    <string name="flist_view_fragment_title">Lists</string>
    <string name="item_view_activity_title">Items</string>
    <string name="filter_view_fragment_title">Filters</string>
    <string name="add_item_button_description">Add Item</string>
    <string name="app_name">fliplist</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_edit_flist">Manage Lists</string>
    <string name="menu_export_import_db">Export/Import</string>
    <string name="save_button_text">Save</string>
    <string name="text_view_flist_description_text">Description</string>
    <string name="text_view_flist_name_edit_text">Name</string>
    <string name="flist_save_button_txt">Cat</string>
    <string name="item_save_button_txt">+</string>
    <string name="flist_name_or_edit_text">Create New List</string>
    <string name="text_view_flist_type_text">Type</string>
    <string name="check_box">CheckBox</string>
    <string name="text_view">TextView</string>
    <string name="item_info_text">Item Info</string>
    <string name="cat_list_text_view">CatListTextView</string>
    <string name="cat_list_text_view_type">Type Name</string>
    <string name="category_list_add_button_text">+</string>
    <string name="item_add_button_text">+</string>

    <string name="filter_list_text_view">CatListTextView</string>
    <string name="filter_list_text_view_type">Type Name</string>
    <string name="filter_list_add_button_text">Add Filter</string>
    <string name="filter_list_add_button">Add Filter</string>
    <string name="filter_list_text_view_header">Filters</string>
    <string name="category_list_text_view_header">Categories</string>
    <string name="category_list_text_view">CatListTextView</string>
    <string name="category_list_text_view_type">Type Name</string>
    <string name="title_activity_main">FlipList</string>
    <string name="title_activity_save_cat">SaveCatActivity</string>
    <string name="title_activity_add_edit_cat">AddEditCatActivity</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_view_flist_id_text">ID</string>
    <string name="add_new_category_text">Add New Category</string>
    <string name="flist_category_add_button_text">+</string>
    <string name="flist_delete_button_text">Delete</string>

    <string name="item_edit_title_text">Edit Item</string>
    <string name="item_edit_name_text">Name</string>
    <string name="item_edit_name_text_hint">name</string>
    <string name="item_edit_description_text">Description</string>
    <string name="item_edit_description_text_hint">description</string>
    <string name="item_edit_category_text">Categories</string>
    <string name="item_edit_category_list">No Categories Selected</string>
    <string name="item_edit_category_selection_button_text">Select Categories</string>
    <string name="item_edit_flist_text">List</string>
    <string name="item_edit_notes_text">Notes</string>
    <string name="item_edit_notes_text_hint">notes</string>
    <string name="item_edit_save_text">Save</string>
    <string name="item_edit_delete_text">Delete</string>
    <string name="item_edit_cancel_text">Cancel</string>
    <string name="item_edit_due_text">Due</string>
    <string name="item_edit_due_text_hint">due</string>
    <string name="pick_time">Time</string>
    <string name="pick_date">Date</string>
    <string name="no_due_time_button_text">No Time</string>
    <string name="no_due_date_button_text">No Date</string>
    <string name="title_activity_add_edit_item">AddEditItemActivity</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="test_string1">testing</string>
    <string name="test_string2">yeah</string>
    <string name="flist_filter_text">Filter</string>
    <string name="title_activity_add_edit_cat_list">AddEditCatListActivity</string>
    <string name="title_activity_export_import_db">ExportImportDBActivity</string>
    <string name="restore_db_version_conflict">DB Version Conflict Failure</string>
    <string name="restore_file_error">Error restoring DB file</string>


</resources>