<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/flist_list_text_view_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/flist_list_text_view"
        android:layout_alignParentRight="true"
        android:text="@string/flist_list_text_view_type"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/flist_list_text_view_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:text="@string/flist_list_text_view_header"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/flist_list_add_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/flist_list_add_button_text" />

    <TextView
        android:id="@+id/flist_list_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/flist_list_add_button"
        android:text="@string/flist_list_text_view"
        android:textSize="26sp" />
    
</RelativeLayout>