<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:background="#D8D8D8"
	    android:orientation="vertical"
	    tools:context=".AddEditItemActivity" >

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
	    
		<LinearLayout
			android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
	
		    android:background="#D8D8D8"
		    android:orientation="vertical"
		    tools:context=".AddEditItemActivity" >
		    
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/padding_medium"
		        android:padding="@dimen/padding_small"
		        android:background="#FFFFFF" >
		
		        <CheckBox
		            android:id="@+id/item_completed_checkbox"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true" />
		
		        <EditText
		            android:id="@+id/item_edit_name_edittext"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentTop="true"
		            android:layout_toRightOf="@+id/item_completed_checkbox"
		            android:ems="10"
		            android:hint="@string/item_edit_name_text_hint" >
		
		            <requestFocus
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" />
		
		        </EditText>
		
		    </RelativeLayout>
		
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/padding_medium"
		        android:padding="@dimen/padding_small"
		        android:background="#FFFFFF" >
		
		        <TextView
		            android:id="@+id/item_edit_text_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/item_edit_description_text"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <EditText
		            android:id="@+id/item_edit_description_edittext"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/item_edit_text_textview"
		            android:ems="10"
		            android:hint="@string/item_edit_description_text_hint" />
		
		    </RelativeLayout>
		    
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/padding_medium"
		        android:padding="@dimen/padding_small"
		        android:background="#FFFFFF" >
		
		        <TextView
		            android:id="@+id/item_edit_flist_text_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/item_edit_flist_text"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <Spinner
		            android:id="@+id/item_edit_flist_spinner"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/item_edit_flist_text_textview" />
		        
		    </RelativeLayout>
		
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/padding_medium"
		        android:padding="@dimen/padding_small"
		        android:background="#FFFFFF" >
		
		        <TextView
		            android:id="@+id/item_edit_category_text_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/item_edit_category_text"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		        <TextView
		            android:id="@+id/item_edit_category_list"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/item_edit_category_text_textview"
		            android:text="@string/item_edit_category_list"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <Button
		            android:id="@+id/item_edit_category_selection_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/item_edit_category_list"
		            android:onClick="showDatePickerDialog"
		            android:text="@string/item_edit_category_selection_button_text" />
		        
		    </RelativeLayout>
		
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/padding_medium"
		        android:background="#FFFFFF"
		        android:padding="@dimen/padding_small" >
		
		        <TextView
		            android:id="@+id/item_edit_notes_text_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:text="@string/item_edit_notes_text"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <EditText
		            android:id="@+id/item_edit_notes_edittext"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignParentRight="true"
		            android:layout_below="@+id/item_edit_notes_text_textview"
		            android:ems="10"
		            android:hint="@string/item_edit_notes_text_hint"
		            android:inputType="textMultiLine" />
		        
		    </RelativeLayout>
		
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="@dimen/padding_medium"
		        android:background="#FFFFFF"
		        android:padding="@dimen/padding_small" >
		
		        <TextView
		            android:id="@+id/item_edit_due_text_textview"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:text="@string/item_edit_due_text"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <Button
		            android:id="@+id/time_edit_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/item_edit_due_text_textview"
		            android:onClick="showTimePickerDialog"
		            android:text="@string/pick_time" />
		
		        <Button
		            android:id="@+id/date_edit_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignBaseline="@+id/time_edit_button"
		            android:layout_alignBottom="@+id/time_edit_button"
		            android:layout_toRightOf="@+id/time_edit_button"
		            android:onClick="showDatePickerDialog"
		            android:text="@string/pick_date" />
		
		        <Button
		            android:id="@+id/no_due_time_button"
		            style="?android:attr/buttonStyleSmall"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/time_edit_button"
		            android:onClick="itemEditNoDueTimeButtonAction"
		            android:text="@string/no_due_time_button_text" />
		
		        <Button
		            android:id="@+id/no_due_date_button"
		            style="?android:attr/buttonStyleSmall"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@+id/date_edit_button"
		            android:layout_toRightOf="@id/no_due_time_button"
		            android:onClick="itemEditNoDueDateButtonAction"
		            android:text="@string/no_due_date_button_text" />
		
		        <EditText
		            android:id="@+id/item_edit_id_edittext"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:inputType="none"
		            android:hint=""
		            android:ems="10"
		            android:visibility="gone" />
		
		    </RelativeLayout>
		</LinearLayout>
	</ScrollView>
	    
	<LinearLayout
	    android:id="@+id/item_edit_bottom_layout"
	    android:layout_width="match_parent"
	    android:layout_height="34dp" 
	    android:background="#FFFFFF"
	    android:orientation="vertical" >
		<RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="#FFFFFF" >

			<ImageButton
	            android:layout_alignParentRight="true"
	            android:id="@+id/item_edit_add_item_button"
	            android:contentDescription="@string/add_item_button_description"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:background="@android:drawable/ic_menu_add" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>

