<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dip" >

    <CheckBox
        android:id="@+id/itemCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/check_box" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/itemCheckBox"
        android:layout_toRightOf="@+id/itemCheckBox"
        android:text="@string/text_view"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/itemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itemName"
        android:layout_below="@+id/itemName"
        android:text="@string/item_info_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>